--- a/style.css
+++ b/style.css
@@ -226,3 +226,57 @@ section{
     bottom: 90px;
 }
 
+.kotak{
+    display: flex;
+    margin-left: 4px;
+}
+
+.judul2{
+    font-family: Arial;
+    color: white;
+    font-size: 32px;
+    position: relative;
+    bottom: 50px;
+}
+
+.form-2{
+    position: relative;
+    bottom: 50px;
+    width: 190px;
+    height: 80px;
+    border: 2px solid gray;
+    padding: 10px;
+    border-radius: 4px;
+}
+
+.judul3{
+    font-family: Arial;
+    color: white;
+    font-size: 20px;
+    margin-bottom: 5px;
+    display: flex;
+    justify-content: center;
+}
+
+
+#id-item{
+    color: grey;
+    font-family: Arial;
+    font-size: 14px;
+    list-style: none;
+    
+}
+
+.form-3{
+    position: relative;
+    bottom: 50px;
+    width: 190px;
+    left: 20px;
+    height: 80px;
+    border: 2px solid gray;
+    padding: 10px;
+    border-radius: 4px;
+}
+
+
+
